sjengida/g1/CheckBadFlow
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:991:1: error: use of undeclared identifier 'pawnmated_4'
pawnmated_4 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:992:1: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
knightmated_3 = 0; 
^~~~~~~~~~~~~
knightmates
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:979:5: note: 'knightmates' declared here
int knightmates; // [rsp+8h] [rbp-6048h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:993:1: error: use of undeclared identifier 'bishopmated_2'
bishopmated_2 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:994:1: error: use of undeclared identifier 'rookmated_1'
rookmated_1 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:995:1: error: use of undeclared identifier 'queenmated_0'
queenmated_0 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1288:6: error: use of undeclared identifier 'pawnmated_4'
if ( pawnmated_4 == v4 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1302:14: error: use of undeclared identifier 'pawnmated_4'
if ( !( v4 | pawnmated_4) ) 
             ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1310:6: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
if ( knightmated_3 != knightmates ) 
     ^~~~~~~~~~~~~
     knightmates
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:979:5: note: 'knightmates' declared here
int knightmates; // [rsp+8h] [rbp-6048h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1316:23: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
if ( !( knightmates | knightmated_3) ) 
                      ^~~~~~~~~~~~~
                      knightmates
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:979:5: note: 'knightmates' declared here
int knightmates; // [rsp+8h] [rbp-6048h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1324:6: error: use of undeclared identifier 'bishopmated_2'
if ( bishopmated_2 != bishopmates ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1330:23: error: use of undeclared identifier 'bishopmated_2'
if ( !( bishopmates | bishopmated_2) ) 
                      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1338:6: error: use of undeclared identifier 'rookmated_1'
if ( rookmated_1 != rookmates ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1344:21: error: use of undeclared identifier 'rookmated_1'
if ( !( rookmates | rookmated_1) ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1351:6: error: use of undeclared identifier 'queenmated_0'
if ( queenmated_0 != v24 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1357:20: error: use of undeclared identifier 'queenmated_0'
else if ( !( v24 | queenmated_0) ) 
                   ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1381:6: error: use of undeclared identifier 'pawnmated_4'
v4 = pawnmated_4 - 1; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1382:1: error: use of undeclared identifier 'pawnmated_4'
pawnmated_4 = v4; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1384:15: error: use of undeclared identifier 'bishopmated_2'
bishopmates = bishopmated_2 - 1; 
              ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1385:1: error: use of undeclared identifier 'bishopmated_2'
bishopmated_2 = bishopmates; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1387:13: error: use of undeclared identifier 'rookmated_1'
rookmates = rookmated_1 - 1; 
            ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1388:1: error: use of undeclared identifier 'rookmated_1'
rookmated_1 = rookmates; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1390:7: error: use of undeclared identifier 'queenmated_0'
v24 = queenmated_0 - 1; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1391:1: error: use of undeclared identifier 'queenmated_0'
queenmated_0 = v24; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1393:1: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
knightmated_3 = knightmates; 
^~~~~~~~~~~~~
knightmates
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:979:5: note: 'knightmates' declared here
int knightmates; // [rsp+8h] [rbp-6048h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:1395:3: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
--knightmated_3; 
  ^~~~~~~~~~~~~
  knightmates
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/partner.c:979:5: note: 'knightmates' declared here
int knightmates; // [rsp+8h] [rbp-6048h] 
    ^
25 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/CheckBadFlow/src/obj/partner.o] Error 1
